Add the collect and track docs prototype to index

--- a/app/views/release/index.html
+++ b/app/views/release/index.html
@@ -40,6 +40,22 @@
       </h2>
 
       <div class="moj-timeline">
+
+      <div class="moj-timeline__item">
+            <div class="moj-timeline__header">
+                <h2 class="moj-timeline__title">Collect and track documents prototype v1</h2>
+            </div>
+            <p class="moj-timeline__date">
+                <time datetime="2020-08-19T00:00:00.000Z">24 August 2020</time>
+            </p>
+            <div class="moj-timeline__description">
+                <p>Test the process of collecting documents before a case is referred to the Parole Board</p>
+                <a class="govuk-button" href="/release/case/collect-documents">Part one</a>
+                <a class="govuk-button" href="/release/case/collect-and-track-documents">Part two</a>
+                
+            </div>
+        </div>
+        
         <div class="moj-timeline__item">
             <div class="moj-timeline__header">
                 <h2 class="moj-timeline__title">Check documentation prototype v1</h2>
