--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,6 +15,7 @@
       </h1>{{releaseVersion | log }}
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="/release">Manage a parole review</a></li>
+        <li><a href="/recall">Managing a recall for a previous offender</a></li>
       </ul>
     </div>
   </div>
