Add the "start a recall" journey skeleton

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -44,3 +44,12 @@ $govuk-assets-path: '/govuk/assets/';
 .email-preview {
     border: 1px solid govuk-colour("mid-grey");
 }
+
+.govuk-table__cell .govuk-radios__label {
+    &::before {
+        top: 0;
+    }
+    &::after {
+        top: 7px;
+    }
+}
