--- a/app/views/recall/index.html
+++ b/app/views/recall/index.html
@@ -49,8 +49,8 @@
                 <time datetime="2020-08-19T00:00:00.000Z">24 August 2020</time>
             </p>
             <div class="moj-timeline__description">
-                <p>Test the process of starting the recall process for a previuous offender</p>
-                <a class="govuk-button" href="/release/start">View</a>
+                <p>Test the process of starting the recall process for a previous offender</p>
+                <a class="govuk-button" href="/recall/start">View</a>
                 
             </div>
         </div>
