--- a/app/views/recall/sentence-breached.html
+++ b/app/views/recall/sentence-breached.html
@@ -26,7 +26,7 @@
             },
             {
                 value: "theft",
-                text: "Theft - deterinate sentence"
+                text: "Theft - determinate sentence"
             }
         ]
         }) }}
