--- a/app/views/recall/sentence-breached.html
+++ b/app/views/recall/sentence-breached.html
@@ -7,8 +7,8 @@
     <div class="govuk-grid-column-two-thirds">
         <form action="/recall/breach-reason">
         {{ govukRadios({
-        idPrefix: "breach-reason",
-        name: "breach-reason",
+        idPrefix: "sentence-breached",
+        name: "sentence-breached",
         fieldset: {
             legend: {
                 text: "What is the breach of licence for?",
