content changes on the COM recall form

--- a/app/views/recall/check-your-answers.html
+++ b/app/views/recall/check-your-answers.html
@@ -33,7 +33,7 @@
                         text: "Offender"
                     },
                     value: {
-                        html: "75/721445A<br>Kate Kim<br>DOB: 23 Feb 1970"
+                        html: "75/721445A<br>Jack Johnson<br>DOB: 23 Feb 1970"
                     },
                     actions: {
                         items: [
