--- a/app/views/recall/emergency.html
+++ b/app/views/recall/emergency.html
@@ -17,12 +17,15 @@
                 classes: "govuk-fieldset__legend--l"
             }
         },
+        hint: {
+              text: "Emergency recalls apply only to IPP, indetetminate and life sentences, or someone who poses a great risk to the public that their immediate detention is required."
+        },
         items: [
            {
                 value: "yes",
                 text: "Yes",
                 conditional: {
-                    html: "<p>You need to call PPCS</p>"
+                    html: "<p>You need to call PPCS on 020 987 16567 to notify them of the urgency of the situation first</p>"
                 }
             },
             {
