--- a/app/views/recall/index-offence.html
+++ b/app/views/recall/index-offence.html
@@ -19,7 +19,7 @@
                     text: "Full name"
                 },
                 value: {
-                    text: "Kate J Kim"
+                    text: "Jack Johnson"
                 }
                 },
                 {
@@ -32,26 +32,18 @@
                 },
                 {
                 key: {
-                    text: "Date"
+                    text: "Minimum term"
                 },
                 value: {
-                    html: "20 September 1976"
+                    text: "18 years"
                 }
                 },
                 {
                 key: {
-                    text: "Establishment"
+                    text: "Date of offence"
                 },
                 value: {
-                    html: 'HMP Leeds'
-                }
-                },
-                {
-                key: {
-                    text: "Offender manager"
-                },
-                value: {
-                    html: 'Tim Cit'
+                    html: "20 January 2001"
                 }
                 }
             ]
