--- a/app/views/recall/layout.html
+++ b/app/views/recall/layout.html
@@ -35,7 +35,7 @@
 {% endblock %}
 
 {% block pageTitle %}
-  Managing a recall for a previous offender
+  Manage a recall for an offender on licence
 {% endblock %}
 
 {% block header %}
@@ -55,7 +55,7 @@
             <a class="moj-header__link moj-header__link--organisation-name" href="/">HMPPS</a>
 
             <a class="moj-header__link moj-header__link--service-name" href="/recall">
-              Managing a recall for a previous offender
+              Manage a recall for an offender on licence
             </a>
         </div>
         <div class="moj-header__content">
@@ -79,7 +79,7 @@
         </div>
     </div>
   </header>
-  
+
   <div class="govuk-width-container">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
