--- a/app/views/recall/location.html
+++ b/app/views/recall/location.html
@@ -12,7 +12,7 @@
             name: "offender-location",
             fieldset: {
                 legend: {
-                    text: "Where is Kate Kim now?",
+                    text: "Where is Jack Johnson now?",
                     isPageHeading: true,
                     classes: "govuk-fieldset__legend--l"
                 }
