--- a/app/views/recall/recommendation.html
+++ b/app/views/recall/recommendation.html
@@ -17,19 +17,15 @@
                     classes: "govuk-fieldset__legend--l"
                 }
             },
+            hint: {
+                  text: "Because the offender is on life sentence, standard recall is the only possible recall option"
+            },
             items: [
                 {
                     value: "standard",
                     text: "Standard recall",
                     hint: {
                         text: "Remainder of the sentence"
-                    }
-                },
-                {
-                    value: "fixed",
-                    text: "28 days fixed recall",
-                    hint: {
-                        text: "Because this sentence is longer than 12 months"
                     }
                 }
             ]
