--- a/app/views/recall/search.html
+++ b/app/views/recall/search.html
@@ -66,7 +66,7 @@
               text: "Released from"
             },
             {
-              text: "Released to"
+              text: "Released on"
             },
             {
               text: "Gender"
@@ -84,10 +84,10 @@
                 text: "75/721445A"
               },
               {
-                text: "Kim"
+                text: "Jack"
               },
               {
-                text: "Kate"
+                text: "Johnson"
               },
               {
                 text: "23 Feb 1970"
@@ -128,7 +128,7 @@
                 text: "2 August 2020"
               },
               {
-                text: "Female"
+                text: "Male"
               },
               {
                 text: "White"
