--- a/app/views/recall/start.html
+++ b/app/views/recall/start.html
@@ -3,14 +3,14 @@
 {% block content %}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Notify PPCS of a recall</h1>
+        <h1 class="govuk-heading-l">Manage a recall for an offender on licence</h1>
 
-        <p class="govuk-body">This service replaces the recall report. </p>
+        <p class="govuk-body">This service replaces the Part A report. </p>
         <p class="govuk-body">Use this service to:</p>
 
         <ul class="govuk-list govuk-list--bullet">
-            <li>initiate a recall request for an offender on licencesed supervision</li>
-            <li>notify Public Protection Casework Section of the recall request</li>
+            <li>initiate a recall request for an offender on licence</li>
+            <li>notify Public Protection Casework Section (PPCS) of the recall request</li>
             <li>track progress of a recall</li>
         </ul>
 
@@ -21,14 +21,9 @@
             </svg>
         </a>
 
-        <h2 class="govuk-heading-m">Before you start</h2>
-
-        <p class="govuk-body">You must have decided that the threshold for recall has been met call PPCS on: 020 987 165 and let them know as soon as possible.</p>
-
-        <p class="govuk-body">You cannot initiate a recall request for someone that [geographic resitrction here]</p>
     </div>
 
-    
+
 </div>
 
 {% endblock %}
