--- a/app/views/recall/breach-reason.html
+++ b/app/views/recall/breach-reason.html
@@ -5,6 +5,10 @@
 
 {% block content %}
 <div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-third">
+        {% set currentPage = "breach-reason" %}
+        {% include "recall/_side-navigation.html" %}
+    </div>
     <div class="govuk-grid-column-two-thirds">
         <form action="/recall/vulnerable-situations">
 
