--- a/app/views/recall/emergency.html
+++ b/app/views/recall/emergency.html
@@ -4,6 +4,10 @@
 
 {% block content %}
 <div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-third">
+        {% set currentPage = 'emergency' %}
+        {% include "recall/_side-navigation.html" %}
+    </div>
     <div class="govuk-grid-column-two-thirds">
         <form action="/recall/search">
         {{ govukRadios({
