--- a/app/views/recall/index-offence.html
+++ b/app/views/recall/index-offence.html
@@ -7,6 +7,10 @@
 
 {% block content %}
 <div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-third">
+        {% set currentPage = "index-offence" %}
+        {% include "recall/_side-navigation.html" %}
+    </div>
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">Index offence details</h1>
         <p class="govuk-body">An explanation of what the index offence was</p>
