--- a/app/views/recall/other-measures.html
+++ b/app/views/recall/other-measures.html
@@ -6,6 +6,10 @@
 
 {% block content %}
 <div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-third">
+        {% set currentPage = "other-measures" %}
+        {% include "recall/_side-navigation.html" %}
+    </div>
     <div class="govuk-grid-column-two-thirds">
         <form action="/recall/recommendation">
 
