--- a/app/views/recall/recommendation.html
+++ b/app/views/recall/recommendation.html
@@ -5,6 +5,10 @@
 
 {% block content %}
 <div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-third">
+        {% set currentPage = "recommendation" %}
+        {% include "recall/_side-navigation.html" %}
+    </div>
     <div class="govuk-grid-column-two-thirds">
         <form action="/recall/previous-convictions">
         {{ govukRadios({
