--- a/app/views/recall/search.html
+++ b/app/views/recall/search.html
@@ -5,7 +5,11 @@
 
 {% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-one-third">
+        {% set currentPage = 'search' %}
+        {% include "recall/_side-navigation.html" %}
+    </div>
+    <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">
           Find someone
         </h1>
