--- a/app/views/recall/sentence-breached.html
+++ b/app/views/recall/sentence-breached.html
@@ -4,6 +4,10 @@
 
 {% block content %}
 <div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-third">
+        {% set currentPage = "sentence-breached" %}
+        {% include "recall/_side-navigation.html" %}
+    </div>
     <div class="govuk-grid-column-two-thirds">
         <form action="/recall/breach-reason">
         {{ govukRadios({
