--- a/app/views/recall/supervision-response.html
+++ b/app/views/recall/supervision-response.html
@@ -5,6 +5,10 @@
 
 {% block content %}
 <div class="govuk-grid-row">
+    <div class="govuk-grid-column-one-third">
+        {% set currentPage = "supervision-response" %}
+        {% include "recall/_side-navigation.html" %}
+    </div>
     <div class="govuk-grid-column-two-thirds">
         <form action="/recall/other-measures">
         {{ govukRadios({
